--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -1,9 +1,9 @@
-page-home {
-    //changes background color
+page-weather {
     .bg-image {
         background-image: url('../../assets/imgs/sky.png');
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
     }
+
 }
